# rag-guardrails

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  run_local.sh
.github/workflows/: ci.yml  codeql.yml
.streamlit/: config.toml
data/corpus/: nist_ai_rmf.md  owasp_llm_top10.md
docker/: entrypoint.sh
docs/: architecture.md  security.md
eval/: attacks.yaml  questions.yaml  run_eval.py
src/rag/: __init__.py  api.py  chunking.py  config.py  embeddings.py  ingest.py  llm.py  models.py  pipeline.py  prompt.py  retriever.py  store.py
src/rag/guardrails/: __init__.py  input_filters.py  output_filters.py  pii.py
tests/: conftest.py  test_guardrails.py  test_pipeline.py
ui/: streamlit_app.py
