[project]
name = "rag-guardrails"
version = "1.0.0"
description = "Production RAG assistant with an evaluation harness and an OWASP-LLM-Top-10 guardrail layer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dr. Barry" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "anthropic>=0.69",
    "sentence-transformers>=3.3",
    "numpy>=1.26",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.2.8",
    "datasets>=3.0",
    "mlflow>=2.18",
    "langchain-anthropic>=0.3",
    "langchain-huggingface>=0.1",
]
ui = ["streamlit>=1.40"]
dev = ["pytest>=8.3", "ruff>=0.8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
